fix: better spacing for version number

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -27,6 +27,6 @@
   font-size: 10px;
   text-decoration: none;
   vertical-align: sub;
-  margin-left: -5px;
+  margin-left: -1px;
   letter-spacing: 0;
 }
